# socket-connect

./: CMakeLists.txt  Dockerfile  README.md  docker-entrypoint.sh  manifest.h.in
src/: main.cpp
src/core/: service.cpp  socket.cpp  web_socket.cpp
src/foundation/: base64.cpp  dispatch_queue.cpp  logger.cpp  utils.cpp
src/foundation/include/: base64.h  dispatch_queue.h  logger.h  runtime_utils.h  utils.h
src/include/: service.h  socket.h  web_socket.h
